--- a/audits/google.toml
+++ b/audits/google.toml
@@ -8842,6 +8842,13 @@ version = "0.8.3"
 aggregated-from = "https://chromium.googlesource.com/chromiumos/third_party/rust_crates/+/refs/heads/main/cargo-vet/audits.toml?format=TEXT"
 
 [[audits.rand]]
+who = "Lukasz Anforowicz <lukasza@chromium.org>"
+criteria = [ "safe-to-deploy", "ub-risk-2",]
+version = "0.8.5"
+notes = "For more detailed unsafe review notes please see https://crrev.com/c/6362797\n"
+aggregated-from = "https://chromium.googlesource.com/chromium/src/+/main/third_party/rust/chromium_crates_io/supply-chain/audits.toml?format=TEXT"
+
+[[audits.rand]]
 who = "danakj@chromium.org"
 criteria = [ "safe-to-run", "does-not-implement-crypto",]
 version = "0.8.5"
@@ -8867,6 +8874,13 @@ version = "0.3.1"
 notes = "This crate doesn't actually implement ChaCha, it uses the implementation in\n`c2-chacha`.  Note that this review has been internally tracked in b/330501364.\n"
 aggregated-from = "https://chromium.googlesource.com/chromium/src/+/main/third_party/rust/chromium_crates_io/supply-chain/audits.toml?format=TEXT"
 
+[[audits.rand_chacha]]
+who = "Lukasz Anforowicz <lukasza@chromium.org>"
+criteria = [ "safe-to-deploy", "ub-risk-2",]
+version = "0.3.1"
+notes = "For more detailed unsafe review notes please see https://crrev.com/c/6362797\n"
+aggregated-from = "https://chromium.googlesource.com/chromium/src/+/main/third_party/rust/chromium_crates_io/supply-chain/audits.toml?format=TEXT"
+
 [[audits.rand_core]]
 who = "Android Legacy"
 criteria = "safe-to-run"
@@ -8878,6 +8892,13 @@ who = "Android Legacy"
 criteria = "safe-to-run"
 version = "0.6.4"
 aggregated-from = "https://chromium.googlesource.com/chromiumos/third_party/rust_crates/+/refs/heads/main/cargo-vet/audits.toml?format=TEXT"
+
+[[audits.rand_core]]
+who = "Lukasz Anforowicz <lukasza@chromium.org>"
+criteria = [ "safe-to-deploy", "ub-risk-2",]
+version = "0.6.4"
+notes = "For more detailed unsafe review notes please see https://crrev.com/c/6362797\n"
+aggregated-from = "https://chromium.googlesource.com/chromium/src/+/main/third_party/rust/chromium_crates_io/supply-chain/audits.toml?format=TEXT"
 
 [[audits.rand_pcg]]
 who = "ChromeOS"
